[gd_scene load_steps=5 format=4 uid="uid://ctai4lml4x0jf"]

[ext_resource type="Script" uid="uid://cqt3pxd2ws1ne" path="res://Prefab/GUI/LevelEditor/EventEditor/LevelEditorEventEditor.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://ckl0f8r55y857" path="res://Prefab/GUI/LevelEditor/EventContianer/LevelEventListContainer.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://bcy6nhsn5acy7" path="res://Prefab/GUI/LevelEditor/Inspector/LevelEditorInspector.tscn" id="3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ua8vl"]

[node name="LevelEditorEventEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_ua8vl")

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/PanelContainer"]
layout_mode = 2

[node name="InitLevelEventListContainer" parent="HSplitContainer/PanelContainer/HBoxContainer" node_paths=PackedStringArray("inspector") instance=ExtResource("2")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
scroll_deadzone = 20
inspector = NodePath("../LevelEditorInspector")

[node name="TextLabel" parent="HSplitContainer/PanelContainer/HBoxContainer/InitLevelEventListContainer/VboxContainer/AddEventButton" index="0"]
offset_right = 240.0
text = "添加事件"

[node name="VSeparator" type="VSeparator" parent="HSplitContainer/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="ReadyLevelEventListContainer" parent="HSplitContainer/PanelContainer/HBoxContainer" node_paths=PackedStringArray("inspector") instance=ExtResource("2")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
scroll_deadzone = 20
inspector = NodePath("../LevelEditorInspector")

[node name="Label" parent="HSplitContainer/PanelContainer/HBoxContainer/ReadyLevelEventListContainer/VboxContainer" index="0"]
text = "关卡准备事件"

[node name="TextLabel" parent="HSplitContainer/PanelContainer/HBoxContainer/ReadyLevelEventListContainer/VboxContainer/AddEventButton" index="0"]
offset_right = 241.0
text = "添加事件"

[node name="VSeparator2" type="VSeparator" parent="HSplitContainer/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="StartEventListContainer" parent="HSplitContainer/PanelContainer/HBoxContainer" node_paths=PackedStringArray("inspector") instance=ExtResource("2")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
scroll_deadzone = 20
inspector = NodePath("../LevelEditorInspector")

[node name="Label" parent="HSplitContainer/PanelContainer/HBoxContainer/StartEventListContainer/VboxContainer" index="0"]
text = "关卡开始事件"

[node name="TextLabel" parent="HSplitContainer/PanelContainer/HBoxContainer/StartEventListContainer/VboxContainer/AddEventButton" index="0"]
offset_right = 241.0
text = "添加事件"

[node name="LevelEditorInspector" parent="HSplitContainer/PanelContainer/HBoxContainer" instance=ExtResource("3")]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 1

[connection signal="visibility_changed" from="." to="." method="Save"]
[connection signal="change" from="HSplitContainer/PanelContainer/HBoxContainer/InitLevelEventListContainer" to="." method="InitEventChange"]
[connection signal="change" from="HSplitContainer/PanelContainer/HBoxContainer/ReadyLevelEventListContainer" to="." method="ReadyEventChange"]
[connection signal="change" from="HSplitContainer/PanelContainer/HBoxContainer/StartEventListContainer" to="." method="StartEventChange"]

[editable path="HSplitContainer/PanelContainer/HBoxContainer/InitLevelEventListContainer"]
[editable path="HSplitContainer/PanelContainer/HBoxContainer/InitLevelEventListContainer/VboxContainer/AddEventButton"]
[editable path="HSplitContainer/PanelContainer/HBoxContainer/ReadyLevelEventListContainer"]
[editable path="HSplitContainer/PanelContainer/HBoxContainer/ReadyLevelEventListContainer/VboxContainer/AddEventButton"]
[editable path="HSplitContainer/PanelContainer/HBoxContainer/StartEventListContainer"]
[editable path="HSplitContainer/PanelContainer/HBoxContainer/StartEventListContainer/VboxContainer/AddEventButton"]
